# EnG_ProjectA

./: .env.example  .gitignore  AZURE_SETUP_GUIDE.md  Clinet_goal_Current_goal_vs_goal.txt  DEMO_SCRIPT.md  DEPLOYMENT.md  Dockerfile  HOW_TO_RUN.txt  MANUAL_DEPLOY.md  MBD_IMPLEMENTATION.md  PRESENTATION_GUIDE.md  Procfile  README.md  SPRINT_REPORT_INSTRUCTIONS.md  TECHNICAL_SUMMARY.md  TEST_REPORT.md  app.js  app.py  dataset_catalog.py  index.html  quantum_runner.py  render.yaml  requirements.txt  run_command.txt  runner.py  start.py  startup.sh  staticwebapp.config.json  style.css  task_logs.docx  test_integration.py  validate_datasets.py  web.config
.azure/: config.json
backend/: __init__.py  app.py  check_qiskit.py  check_utils.py  codegen.py  codegen_backup.py  codegen_simple.py  dataset_catalog.py  debug_cobyla.py  kipu_adapter.py  kipu_executor.py  pipeline_registry.py  quantum_runner.py  runner.py  runner_backup.py  runner_simple.py  test_app.py  test_custom_optimizer.py  test_imports.py  test_optimizers.py
datasets/: finance_portfolio_risk.csv  hr_attrition.csv  supply_chain_disruption.csv
docs/: SysML_Block_Definitions.md
frontend/: app.js  check_ids.js  index.html  node_canvas.json  pipeline (1).json  pipeline.json  pipeline_model.json  style.css  (+7 more)
qml-pipeline/: README.md  pyproject.toml  requirements.txt  setup.cfg
qml-pipeline/notebooks/: experiments.ipynb
qml-pipeline/src/qml_pipeline/: encoder.py  model_io.py  pipeline.py  utils.py  variational.py
qml-pipeline/src/tools/: run_pipeline.py
qml-pipeline/tests/: test_pipeline.py  test_utils.py
(+40 files in other folders)
