[tool.poetry]
name = "qml-pipeline"
version = "0.1.0"
description = "A lightweight Qiskit-based feature transform and classical classifier pipeline for the Iris dataset."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
qiskit = "^0.25.0"
scikit-learn = "^1.0.2"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"