[metadata]
name = qml-pipeline
version = 0.1.0
description = A quantum machine learning pipeline for feature transformation and classification.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/qml-pipeline
license = MIT

[options]
packages = find:
install_requires =
    qiskit
    scikit-learn
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    run_pipeline = tools.run_pipeline:main